viewer/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: underscore-viewer
  labels:
    app: underscore-viewer
spec:
  type: ClusterIP
  selector:
    app: underscore-viewer
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
